src/test/deca/syntax/invalid/resultats/test6_print-synt.res
./src/test/deca/syntax/invalid/test6_print.deca:15:14: missing ')' at ';'
